k8s/app-example-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apis-ns
  labels:
    name: apis-ns
