k8s/app-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meran-deployment-x
  namespace: apis-ns
spec:
  selector:
    matchLabels:
      app: meran-x
  replicas: 2
  template:
    metadata:
      labels:
        app: meran-x
    spec:
      containers:
        - name: meran-x
          image: juanlopezcervero/coruscant:0.0.10-SNAPSHOT
          ports:
            - containerPort: 8080
