k8s/app-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meran-example-x-service
  namespace: apis-ns
spec:
  type: ClusterIP
  ports:
    - name: api-port
      port: 8080
  selector:
    app: meran-x
