k8s/app-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meran-example-apis-ingress
  namespace: apis-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: meran-example-x-service
              servicePort: 8080
            path: /app-example(/|$)(.*)
